# qformats

./: .gitignore  CMakeLists.txt  README.md
include/qformats/: textureman.h
include/qformats/map/: brush.h  entities.h  face.h  map.h  map_file.h  polygon.h  qmath.h  types.h
include/qformats/wad/: palette.h  wad.h
qformats/: CMakeLists.txt
qformats/src/common/: textureman.cpp  textureman.h
qformats/src/map/: brush.cpp  brush.h  map.cpp  map.h  map_file.cpp  map_file.h  polygon.cpp  polygon.h  qmath.cpp  qmath.h  types.h
qmap_viewer/: CMakeLists.txt
qmap_viewer/src/: QuakeMap.cpp  QuakeMap.h  main.cpp
src/: CMakeLists.txt  main.cpp
src/common/: textureman.cpp
src/map/: brush.cpp  entity_solid.cpp  face.cpp  map.cpp  map.h  map_file.cpp  map_file.h  parser.cpp  polygon.cpp  qmath.cpp  qmath.h  types.h
src/wad/: palette.cpp  wad.cpp
testdata/: qmap_standard.map  qmap_valve.map
